2006-02-01  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Update version to 0.2.2.

	* NEWS: Update version to 0.2.2.

	* configure.ac: Update version to 0.2.2.

2006-02-01  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-chroot.cc
	(Chroot): Get "mount-location" and "mount-device" from session
	keyfiles.
	(print_details): Use the correct virtual functions to get
	"Mount Location" and "Mount Device".
	(print_config): Use the correct virtual functions to get
	"mount-location" and "mount-device".

2006-02-01  Roger Leigh  <rleigh@debian.org>

	* Version 0.2.1.

	* debian/changelog: Update for 0.2.1.

	* schroot/sbuild-session.cc (wait_for_child): Set child_status to
	EXIT_FAILURE, rather than this->child_status.  This prevents a
	non-zero exit status being returned at all times by child
	processes.

	* NEWS: Update for 0.2.1.

	* configure.ac: Update version to 0.2.1.

2006-01-30  Roger Leigh  <rleigh@debian.org>

	* Version 0.2.0.

	* schroot/schroot.conf.5.in: Add example for file chroot.

	* test/config.ex2/config: Removed (duplicated in
	test/config.ex2/sarge).

	* test/config.ex2/file: New file.  Test data for file chroots.

2006-01-30  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-options.cc: Beginning a session only works with
	normal chroots.  Session operations on active sessions load all
	chroots, not just session chroots.

	* schroot/sbuild-session.cc
	(run_impl): For persistent sessions, remove aliases prior to
	writing out the session data, to prevent duplicate aliases.
	(run_impl): Only run a command when performing the appropriate
	operations, rather than all the time.
	(setup_chroot): Correct bug in automatic operation which would
	potentially prevent correct cleanup.

	* schroot/sbuild-keyfile.h: Add TODO item for duplicate keys.

	* schroot/sbuild-config.cc (load): Add warnings when chroots and
	aliases names are duplicated.

2006-01-29  Roger Leigh  <rleigh@debian.org>
